--- a/lazyloadingfragments/src/main/AndroidManifest.xml
+++ b/lazyloadingfragments/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="study.hank.com.lazyloadingfragments">
+    package="study.hank.com.lazyloading">
 
     <application
         android:allowBackup="true"
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AnotherActivity"
-            android:screenOrientation="portrait"></activity>
+            android:name="study.hank.com.lazyloading.activity.AnotherActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity"
+            android:name="study.hank.com.lazyloading.activity.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
